--- a/index.html
+++ b/index.html
@@ -80,6 +80,28 @@
           </button>
         </div>
       </div>
+      <!-- About area -->
+      <div class="about-area py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="about-image">
+                <img class="w-100" src="image/about.jpg" alt="about image">
+              </div>
+            </div>
+              <div class="col-lg-6 d-flex align-items-center">
+                <div class="about-text ps-lg-4 pt-4 pt-lg-0">
+                  <h3>Learn more about us</h3>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi qui rem quibusdam possimus nisi ut! Tempora eaque dolorum asperiores magni expedita, omnis, velit aliquam perspiciatis explicabo eligendi error quibusdam cupiditate.
+                  </p>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ad nostrum odio minima molestiae nam nemo consequuntur doloremque aspernatur ducimus, culpa aut repellat dolorum obcaecati.
+                  </p>
+                  <button type="button" class="btn btn-primary">Learn More</button>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
