details area completed

--- a/index.html
+++ b/index.html
@@ -157,6 +157,61 @@
           </div>
         </div>
       </div>
+      <!-- details area -->
+      <div class="details-area py-5">
+        <div class="container">
+          <div class="row">
+            <div class="section-heading text-center mb-5">
+              <h3>More details</h3>
+              <p>Learn more about our company</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 offset-lg-1">
+              <div class="details-ac">
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Company details
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsum molestias at repudiandae totam nisi dignissimos fugit nostrum quos praesentium possimus eius maiores, temporibus quia provident hic atque itaque eveniet? Unde hic, laudantium voluptatem debitis doloremque minus ut itaque accusamus quisquam. Optio quos non eligendi culpa velit, repellat ducimus perferendis.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Service details
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sint quo. Reprehenderit doloremque recusandae quidem placeat aspernatur magni assumenda cumque quaerat numquam, adipisci atque. Possimus impedit nulla pariatur porro earum nisi, quod voluptate explicabo quaerat in nobis, a ratione necessitatibus dolor, aliquid quidem consequuntur deleniti atque esse fugiat voluptates unde?
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        payment details
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam suscipit iusto doloribus tenetur nemo nobis molestias officia quam. Magni nemo necessitatibus asperiores quasi velit quo ut laboriosam sint culpa! Corporis consectetur ipsa blanditiis in a molestiae, quod deleniti voluptate dolorem sapiente ducimus ea perferendis iure voluptas doloremque nam cumque consequatur!
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
