--- a/index.html
+++ b/index.html
@@ -212,6 +212,58 @@
           </div>
         </div>
       </div>
+      <!-- contact area -->
+      <div class="contact-area py-5 bg-light">
+        <div class="container">
+          <div class="row">
+            <div class="section-heading text-center mb-5">
+              <h3>Contact Us</h3>
+              <p>please fill the form to contact with us</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-10 offset-lg-1">
+              <form action="">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="mb-3">
+                      <label for="First name" class="form-label">First name</label>
+                      <input type="text" class="form-control" id="First name" placeholder="john">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="mb-3">
+                      <label for="last name" class="form-label">Last name</label>
+                      <input type="text" class="form-control" id="last name" placeholder="john">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="mb-3">
+                      <label for="email" class="form-label">Email</label>
+                      <input type="email" class="form-control" id="email" placeholder="abc@name.com">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="mb-3">
+                      <label for="phone-number" class="form-label">Phone number</label>
+                      <input type="tel" class="form-control" id="phone-number" placeholder="+88001200000">
+                    </div>
+                  </div>
+                  <div class="col-lg-12">
+                    <div class="mb-3">
+                      <label for="text-message" class="form-label">Text message</label>
+                      <textarea class="form-control" id="text-message" rows="3" placeholder="">Message</textarea>
+                    </div>
+                  </div>
+                  <div class="col-lg-12">
+                    <input type="submit" value="Send message" class="form-control bg-primary text-white">
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
