--- a/index.html
+++ b/index.html
@@ -264,6 +264,46 @@
           </div>
         </div>
       </div>
+      <!-- Partner area -->
+      <div class="Partner-area py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading text-center mb-5">
+                <h3>Our partners</h3>
+                <p>Learn more about our valuable partners</p>
+              </div>
+            </div>
+          </div>
+          <div class="row row-cols-lg-5 row-cols-2 justify-content-center">
+            <div class="col">
+              <div class="partner-image p-4">
+                <img src="image/p-one.jpg" alt="partner image" class="w-100">
+              </div>
+            </div>
+            <div class="col">
+              <div class="partner-image p-4">
+                <img src="image/p-two.jpg" alt="partner image" class="w-100">
+              </div>
+            </div>
+            <div class="col">
+              <div class="partner-image p-4">
+                <img src="image/p-three.jpg" alt="partner image" class="w-100">
+              </div>
+            </div>
+            <div class="col">
+              <div class="partner-image p-4">
+                <img src="image/p-four.jpg" alt="partner image" class="w-100">
+              </div>
+            </div>
+            <div class="col">
+              <div class="partner-image p-4">
+                <img src="image/p-five.jpg" alt="partner image" class="w-100">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
